# agent

./: CLAUDE.md  Cargo.toml  Makefile  README.md
int_to_roman/: README.md
src/: agent.rs  app.rs  autocomplete.rs  bootstrap.rs  config.rs  headless.rs  highlight.rs  input.rs  keys.rs  lib.rs  main.rs  markdown.rs  mcp.rs  memory.rs  ollama.rs  prompts.rs  script.rs  session.rs  tools.rs  types.rs  ui.rs
src/agent/: loop_detect.rs  mod.rs  subtask.rs  turn.rs
src/app/: messages.rs  mod.rs  pickers.rs  plan.rs  scroll.rs  streaming.rs  tree.rs
src/ollama/: mod.rs  parse.rs  stream.rs
src/session/: convert.rs  gitignore.rs  history.rs  mod.rs  persist.rs
src/tools/: builtin.rs  definitions.rs  dispatch.rs  mod.rs  selection.rs
src/tools/builtin/: cargo.rs  file_io.rs  memory_tools.rs  mod.rs  search.rs  text_ops.rs
src/tui/: commands.rs  events.rs  mod.rs
src/ui/: chat.rs  input.rs  mod.rs  picker.rs  plan.rs  status.rs  title.rs  tree.rs  util.rs
test_scripts/: basic.txt  complex_task.txt  error_recovery.txt  flat_toggle.txt  memory.txt  mode_integration.txt  multi_tool.txt  oneshot_no_interview.txt  plan_mode.txt  rust_roman.txt  thinking.txt  thorough_mode.txt  tui_kotlin.txt
tests/harness/sandbox_template/: Cargo.toml
tests/harness/sandbox_template/src/: lib.rs
tests/scripts/: caveman.txt  caveman_deep.txt  caveman_flat.txt  context_savings.txt  context_savings_verify.txt  interview.txt  multi_subtask.txt  multiturn_savings.txt  oneshot.txt  resume_check.txt  subtask_error.txt  thorough.txt  tree_delegation.txt  worker_read_edit.txt
