[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "sync", "fs"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
arboard = { version = "3", features = ["image-data"] }
base64 = "0.22"
png = "0.18"
regex = "1"
glob = "0.3"
pulldown-cmark = { version = "0.12", default-features = false }

[dev-dependencies]
tempfile = "3"
